--- a/index.html
+++ b/index.html
@@ -59,12 +59,11 @@
                         <span class="bg-sky-100 text-sky-800 font-medium px-3 py-1 rounded-full">Figma</span>
                         <span class="bg-sky-100 text-sky-800 font-medium px-3 py-1 rounded-full">Canva</span>
                         <span class="bg-sky-100 text-sky-800 font-medium px-3 py-1 rounded-full">UI Design</span>
+                        <span class="bg-sky-100 text-sky-800 font-medium px-3 py-1 rounded-full">UX Design</span>
                         <span class="bg-sky-100 text-sky-800 font-medium px-3 py-1 rounded-full">CSS</span>
                         <span class="bg-sky-100 text-sky-800 font-medium px-3 py-1 rounded-full">Bootstrap</span>
-                        <span class="bg-sky-100 text-sky-800 font-medium px-3 py-1 rounded-full">CorelDraw</span>
-                        <span class="bg-sky-100 text-sky-800 font-medium px-3 py-1 rounded-full">Blender</span>
                         <span class="bg-sky-100 text-sky-800 font-medium px-3 py-1 rounded-full">IbisPaintX</span>
-                        <span class="bg-gray-200 text-gray-700 font-medium px-3 py-1 rounded-full">React</span>
+						<span class="bg-gray-200 text-gray-700 font-medium px-3 py-1 rounded-full">React</span>
                         <span class="bg-gray-200 text-gray-700 font-medium px-3 py-1 rounded-full">Next.js</span>
                     </div>
                 </div>
